--- a/package.json
+++ b/package.json
@@ -1,17 +1,39 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
-  "license": "",
-  "engines": {
-    "node": ">=6.13.0"
-  },
+  "name": "dylans-service",
+  "version": "1.0.0",
+  "description": "A related items component that works like the one on amazons product pages.",
+  "main": "server/index.js",
   "scripts": {
+    "start:dev": "nodemon /server/index.js",
+    "build:dev": "webpack --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/House-Bezos/Dylans-service.git"
+  },
+  "author": "Dylan Ring (CymruRing)",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/House-Bezos/Dylans-service/issues"
+  },
+  "homepage": "https://github.com/House-Bezos/Dylans-service#readme",
   "dependencies": {
+    "axios": "^0.21.0",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.2.1",
+    "babel-node": "0.0.1-security",
+    "@babel/preset-react": "^7.12.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "body-parser": "^1.19.0"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "nodemon": "^2.0.6"
   }
 }
