--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A related items component that works like the one on amazons product pages.",
   "main": "server/index.js",
   "scripts": {
-    "start:dev": "nodemon /server/index.js",
-    "build:dev": "webpack --watch",
+    "seed": "node ./database/seed.js",
+    "start": "nodemon /server/index.js",
+    "build": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,19 +20,21 @@
   },
   "homepage": "https://github.com/House-Bezos/Dylans-service#readme",
   "dependencies": {
-    "axios": "^0.21.0",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "axios": "^0.21.0",
     "babel-loader": "^8.2.1",
     "babel-node": "0.0.1-security",
-    "@babel/preset-react": "^7.12.5",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.10.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
-    "body-parser": "^1.19.0"
+    "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
