--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "mongoose": "^5.10.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "url-loader": "^3.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "css-loader": "^5.0.1",
+    "nodemon": "^2.0.6",
+    "style-loader": "^2.0.0"
   }
 }
