--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
+    "css-grid": "^1.0.7",
     "css-loader": "^5.0.1",
     "nodemon": "^2.0.6",
     "style-loader": "^2.0.0"
