--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "seed": "node ./database/seed.js",
     "start": "nodemon /server/index.js",
     "build": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
   "devDependencies": {
     "css-grid": "^1.0.7",
     "css-loader": "^5.0.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "style-loader": "^2.0.0"
   }
