--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^5.10.14",
     "react": "^16.13.0",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
     "url-loader": "^3.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
